# book-covers

./: .gitignore  setup.cfg
book_cover/: config.py  data.py  metric.py  resnet.py  trainer.py
