[metadata]
name = book-covers
version = 0.1.4
author = Tomaskovity Viktor
author_email = tomahun5@gmail.com
description = Book Covers.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/tomaviktor/book-covers
project_urls =
    Bug Tracker = https://github.com/tomaviktor/book-covers/issues
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3

[options]
packages = find:
python_requires = >=3.9
install_requires =
    numpy
    torch
    torchvision
    transformers
    lightning
    datasets
    evaluate
    wandb
    entmax